--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,12 +1,12 @@
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/NewMap.NewMap
+EditorStartupMap=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap.ThirdPersonExampleMap
 LocalMapOptions=
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Game/AI/HeroMonster_GameInstance.HeroMonster_GameInstance_C
-GameDefaultMap=/Game/Maps/NewMap.NewMap
+GameDefaultMap=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap.ThirdPersonExampleMap
 ServerDefaultMap=/Engine/Maps/Entry
 GlobalDefaultGameMode=None
 GlobalDefaultServerGameMode=None
@@ -198,5 +198,3 @@ InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,bUseMBPOuterBounds=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPOuterBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
 ChaosSettings=(DefaultThreadingModel=DedicatedThread,DedicatedThreadTickMode=VariableCappedWithTarget,DedicatedThreadBufferMode=Double)
-
-
