--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -67,7 +67,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="TeleportRight",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MotionController_Right_FaceButton1)
 +ActionMappings=(ActionName="TeleportRight",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MotionController_Right_Thumbstick)
 +ActionMappings=(ActionName="TeleportRight",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=None)
-+ActionMappings=(ActionName="Okay",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
++ActionMappings=(ActionName="Okay",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=E)
 +ActionMappings=(ActionName="RightSlide",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=C)
 +ActionMappings=(ActionName="LeftSlide",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Z)
 +ActionMappings=(ActionName="Sell",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Q)
